--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/bootstrap": "^5.1.9",
+    "@types/google-map-react": "^2.1.5",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
@@ -18,6 +19,7 @@
     "@types/redux": "^3.6.0",
     "@types/sass": "^1.43.1",
     "bootstrap": "^5.1.3",
+    "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
