--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
     "@types/sass": "^1.43.1",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "mapbox-gl": "^2.7.0",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
