--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "sass": "^1.49.9",
+    "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
