--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
     "@types/sass": "^1.43.1",
+    "@types/styled-components": "^5.1.24",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "mapbox-gl": "^2.7.0",
