--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-map-gl": "^7.0.7",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "redux": "^4.1.2",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3",
